--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-    "name": "home-manager",
-    "version": "1.0.0",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js",
-      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-    },
-    "dependencies": {
-      "bcrypt": "^5.1.1",
-      "cors": "^2.8.5",
-      "dotenv": "^16.4.5",
-      "express": "^4.19.2",
-      "helmet": "^6.2.0",
-      "jsonwebtoken": "^9.0.2",
-      "pg": "^8.12.0"
-    },
-    "engines": {
-      "node": "20.x",
-      "npm": "10.x"
-    }
+  "name": "home-manager",
+  "version": "1.0.0",
+  "main": "server/server.js",
+  "scripts": {
+    "start": "node server/server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "helmet": "^6.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.12.0"
+  },
+  "engines": {
+    "node": "20.x",
+    "npm": "10.x"
   }
-  
+}
